# gmail-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
specs/001-gmail-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gmail-cli/checklists/: requirements.md
specs/001-gmail-cli/contracts/: cli-interface.md
specs/002-multi-account/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-multi-account/checklists/: requirements.md
specs/002-multi-account/contracts/: cli-commands.md
specs/004-signature-default/: plan.md  research.md  spec.md  tasks.md
specs/004-signature-default/checklists/: requirements.md
specs/005-draft-function/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-draft-function/checklists/: requirements.md
specs/005-draft-function/contracts/: cli-commands.md
src/gmail_cli/: __init__.py  __main__.py
src/gmail_cli/cli/: __init__.py  accounts.py  attachment.py  auth.py  draft.py  main.py  mark.py  read.py  search.py  send.py
src/gmail_cli/models/: __init__.py  attachment.py  credentials.py  email.py  search.py
src/gmail_cli/services/: __init__.py  auth.py  credentials.py  gmail.py
src/gmail_cli/utils/: __init__.py  html.py  markdown.py  output.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_accounts.py  test_attachment.py  test_auth.py  test_draft_cli.py  test_mark.py  test_read.py  test_search.py  test_send.py  test_send_markdown.py
tests/unit/: __init__.py  test_attachment.py  test_auth_service.py  test_compose.py  test_credentials.py  test_draft.py  test_email_parser.py  test_gmail_service.py  test_mark.py  test_markdown.py
